# substrate-arkworks-examples

./: .gitignore  BENCHMARK.MD  BENCHMARKS-CRITERION-bls12_377.md  BENCHMARKS-CRITERION-bls12_377_optimized.md  BENCHMARKS-CRITERION-bls12_381.md  BENCHMARKS-CRITERION-bls12_381_optimized.md  BENCHMARKS-CRITERION-bw6_761.md  BENCHMARKS-CRITERION-bw6_761_optimized.md  BENCHMARKS-CRITERION-ed_on_bls12_377.md  BENCHMARKS-CRITERION-ed_on_bls12_377_optimized.md  BENCHMARKS-CRITERION.md  BENCHMARKS.md  Cargo.toml  LICENSE  MARKDOWN.md  Makefile  README.md  RESULTS.md  benchmark-old.md  benchmark.md  benchmark.sh  benchmarking.rs  benchmarks-ark-substrate-normal.md  benchmarks-comparison.md  benchmarks-native.md  format.json  markdown-dummy.md  neu.json  out.json  out.txt  output.json  output.md  output.txt  output_arkworks.json  output_optimized.json  results.csv  results.json  results.md  test.json  weights.rs
.github/workflows/: benchmark.yml  check.yml  criterion.yml  criterion_optmized.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/: weights.rs
pallets/ark/: Cargo.toml
pallets/ark-demo/: Cargo.toml
pallets/ark-demo/src/: benchmarking.rs  bls12_377.rs  bls12_381.rs  bw6_761.rs  ed_on_bls12_377.rs  ed_on_bls12_381_bandersnatch.rs  lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/ark/src/: benchmarking.rs  bls12_377.rs  bls12_381.rs  bw6_761.rs  ed_on_bls12_377.rs  ed_on_bls12_381_bandersnatch.rs  lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/bak/: bls12_377.rs  bw6_761.rs  ed_on_bls12_377.rs  groth16.rs
pallets/template/: Cargo.toml
pallets/template/benches/: arkworks.rs  bls12_377.rs  bls12_377_template.rs  bls12_377_template_optimized.rs  bls12_381.rs  bls12_381_template.rs  bls12_381_template_optimized.rs  bw6_761.rs  bw6_761_template.rs  bw6_761_template_optimized.rs  ed_on_bls12_377.rs  ed_on_bls12_377_template.rs  ed_on_bls12_377_template_optimized.rs  ed_on_bls12_381.rs  groth16.rs  mock.rs
pallets/template/src/: arkworks.rs  benchmarking.rs  bls12_377.rs  bls12_381.rs  bw6_761.rs  do_nothing.rs  ed_on_bls12_377.rs  ed_on_bls12_381.rs  ed_on_bls12_381_bandersnatch.rs  lib.bak  lib.rs  msm_arguments.rs  tests.rs  utils.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
