[workspace]
resolver = "2"

members = [
    "node",
    "pallets/ark-demo",
    "runtime",
]

[profile.release]
panic = 'unwind'
opt-level = 3
#lto = true

[patch.crates-io]
ark-scale = { path = "/home/davxy/develop/w3f/ark-scale" }

[patch."https://github.com/w3f/ring-vrf"]
dleq_vrf = { path = "/home/davxy/develop/w3f/ring-vrf/dleq_vrf" }
bandersnatch_vrfs = { path = "/home/davxy/develop/w3f/ring-vrf/bandersnatch_vrfs" }
