[package]
name = "node-ark-demo"
version = "0.1.0"
description = "A FRAME-based Substrate node to test and benchmark arkworks primitives."
authors = ["Davide Galassi <davxy@datawok.net>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-ark-demo"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
jsonrpsee = { version = "0.16.2", features = ["server"] }

sc-cli = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-io =  { git = "https://github.com/paritytech/polkadot-sdk" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-crypto-ec-utils = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk" }

# Local Dependencies
node-ark-demo-runtime = { path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"node-ark-demo-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged.
try-runtime = [
	"node-ark-demo-runtime/try-runtime",
	"try-runtime-cli/try-runtime"
]
