[package]
name = "node-ark-demo-runtime"
version = "4.0.0-dev"
description = "A FRAME-based Substrate node to test and benchmark ark primitives."
authors = ["Davide Galassi <davxy@datawok.net>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false  }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true  }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true  }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", optional = true  }

# ARK demo pallet
pallet-ark-demo = { path = "../pallets/ark-demo", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", optional = true  }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-ark-demo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-ark-demo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-ark-demo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
