[package]
name = "node-ark-runtime"
version = "0.1.0"
description = "A FRAME-based Substrate node runtime to test and benchmark Arkworks primitives."
authors = ["Davide Galassi <davxy@datawok.net>"]
edition = "2021"
license = "MIT"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false  }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", optional = true , default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true }

# ARK demo pallet
pallet-ark = { path = "../pallets/ark", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", optional = true  }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-ark/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-ark/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-ark/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
