[package]
name = "pallet-template"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [ "derive" ], default-features = false }
scale-info = { version = "2.1.1", features = ["derive"], default-features = false }
frame-benchmarking = { version = "4.0.0-dev", optional = true, default-features = false }
frame-support = { version = "4.0.0-dev",  default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.3.0", default-features = false }
sp-io = { version = "7.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }

[features]
default = []
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-ark-bls12-381/std",
	"ark-serialize/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-groth16/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]

